# rag-report-generator

./: .gitignore  main.py  notion_data.json  pyproject.toml  requirements.txt  test.ipynb
config/: model_config.yaml  settings.py
core/: chunker.py  data_collector.py  vector_store.py
docs/: BM25_EVALUATION_GUIDE.md  EVALUATION_DATASET_GUIDE.md  EVALUATION_GUIDE.md  LANGFUSE_EVALUATION_GUIDE.md  LANGFUSE_INTEGRATION.md  QUICK_START.md  RETRIEVER_TAGS.md  embedding_cache.md  evaluation_dataset_analysis.md
evaluators/: compare_evaluation_results.py  evaluate_4_strategies_new.py
models/: base.py
prompts/: __init__.py  prompt_manager.py
retrievers/: __init__.py  base_retriever.py  bm25_retriever.py  dense_retriever.py  ensemble_longcontext_retriever.py  ensemble_retriever.py  factory.py  longcontext_retriever.py  multiquery_retriever.py  query_rewrite_retriever.py  time_weighted_retriever.py  timeweighted_retriever.py
scripts/: build_vectordb.py  compare_evaluation_results.py  compare_retrievers.py  compare_retrievers_by_tag.py  evaluate_4_strategies.py  evaluate_4_strategies.sh  evaluate_bm25.py  evaluate_dense.py  evaluate_retriever.py  evaluate_with_langfuse.py  generate_eval_dataset.py  generate_qa_dataset.py  merge_datasets.py  test_raptor.py  test_retrievers_langchain.py  validate_eval_dataset.py
services/: image_processor.py  incremental_sync.py
tests/: test_retrievers.py
utils/: embedding_cache.py  file_utils.py  langfuse_utils.py
vectorstore/: build_mixed_vectordb.py  build_raptor_vectordb.py  build_summary_vectordb.py  build_vectordb.py
(+14 files in other folders)
