[project]
name = "rag-report-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langfuse>=3.10.6",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
]

[tool.setuptools]
packages = ["config", "core", "models", "chains", "agents", "prompts", "services", "rerankers", "retrievers", "evaluators", "vectorstore", "utils"]
